--- a/Properties/Strings.es-MX.xaml
+++ b/Properties/Strings.es-MX.xaml
@@ -146,6 +146,11 @@
     <sys:String x:Key="Supplies_Desc">Visualiza, registra, modifica y elimina insumos utilizados por Italia Pizza.</sys:String>
     <sys:String x:Key="Supplies_BtnNewSupply">Nuevo Insumo</sys:String>
     <sys:String x:Key="Supplies_TitleTable">Lista de Insumos</sys:String>
+    <sys:String x:Key="Supplies_TableHSupply">Insumo</sys:String>
+    <sys:String x:Key="Supplies_TableHSupplier">Proveedor</sys:String>
+    <sys:String x:Key="Supplies_TableHCategory">Categoría</sys:String>
+    <sys:String x:Key="Supplies_TableHUnitPrice">Precio Unitario</sys:String>
+    <sys:String x:Key="Supplies_TableHMeasureUnit">Unidad de Medida</sys:String>
     <sys:String x:Key="Supplies_BtnDeleteSupply">Eliminar Insumo</sys:String>
     <sys:String x:Key="Supplies_BtnEditSupply">Editar Insumo</sys:String>
 
@@ -162,8 +167,10 @@
     <sys:String x:Key="RegSupply_CbSupplyMeasure">Unidad de medida:</sys:String>
     <sys:String x:Key="RegSupply_BtnRegisterSupplier">Registrar Proveedor</sys:String>
     <sys:String x:Key="RegSupply_BtnRegisterSupply">Registrar Insumo</sys:String>
+    <sys:String x:Key="RegSupply_DialogTSuccess">Insumo registrado</sys:String>
+    <sys:String x:Key="RegSupply_DialogDSuccess">La información del insumo ha sido registrada correctamente y los datos han sido guardados con éxito.</sys:String>
     <sys:String x:Key="RegSupply_DialogSelectSupplyImage">Seleccionar imagen del insumo...</sys:String>
-    
+
     <!--Customers-->
     <sys:String x:Key="Customers_Header">Clientes</sys:String>
     <sys:String x:Key="Customers_Desc">Visualiza, registra, modifica y elimina los clientes de pedidos a domicilio de Italia Pizza.</sys:String>
@@ -211,7 +218,6 @@
     <sys:String x:Key="Suppliers_TableHContactName">Nombre de Contacto</sys:String>
     <sys:String x:Key="Suppliers_TableHPhoneNumber">Núm. Telefónico</sys:String>
     <sys:String x:Key="Suppliers_TableHCategories">Categoría</sys:String>
-
 
     <!-- RegisterSupplier-->
     <sys:String x:Key="RegSupplier_Header">Registrar Proveedor</sys:String>
