--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -10,113 +10,164 @@
         Height="720"
         Width="1080" MinWidth="920">
     <Border Background="{StaticResource BackgroundBrush}" CornerRadius="12">
-        <Grid x:Name="RootGrid">
-            <Border x:Name="DialogContener">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="230"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
+        <Grid>
+            <Grid x:Name="RootGrid" Visibility="Collapsed">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="241*"/>
+                    <ColumnDefinition Width="839*"/>
+                </Grid.ColumnDefinitions>
+                <Border x:Name="DialogContener" Grid.ColumnSpan="2">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="230"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
 
-                    <Border Grid.Column="0" Background="#EDEDFE" 
+                        <Border Grid.Column="0" Background="#EDEDFE" 
                             BorderBrush="{StaticResource SecondaryBrush}" 
                             BorderThickness="0.5,0">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="64"/>
-                                <RowDefinition Height="*"/>
-                            </Grid.RowDefinitions>
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="64"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
 
-                            <Border Grid.Row="0" BorderBrush="{StaticResource SecondaryBrush}" BorderThickness="0,0,0,0.5">
-                                <StackPanel Orientation="Horizontal" Margin="16,0,0,0" VerticalAlignment="Center">
-                                    <Image Source="/Resources/Icons/italiapizza-icon.png"
+                                <Border Grid.Row="0" BorderBrush="{StaticResource SecondaryBrush}" BorderThickness="0,0,0,0.5">
+                                    <StackPanel Orientation="Horizontal" Margin="16,0,0,0" VerticalAlignment="Center">
+                                        <Image Source="/Resources/Icons/italiapizza-icon.png"
                                            Width="32" Height="32" RenderOptions.BitmapScalingMode="HighQuality"/>
-                                    <StackPanel Margin="12 0" >
-                                        <TextBlock Text="{DynamicResource Glb_ItaliaPizza}"
+                                        <StackPanel Margin="12 0" >
+                                            <TextBlock Text="{DynamicResource Glb_ItaliaPizza}"
                                                    Style="{DynamicResource SubtitleLabelStyle}"
                                                    FontSize="18"
                                                    VerticalAlignment="Center"/>
-                                        <TextBlock Text="SOFT MANAGEMENT"
+                                            <TextBlock Text="SOFT MANAGEMENT"
                                                    FontSize="9"
                                                    Style="{DynamicResource DescriptionLabelStyle}"/>
+                                        </StackPanel>
                                     </StackPanel>
-                                </StackPanel>
-                            </Border>
+                                </Border>
 
-                            <Border Grid.Row="1">
-                                <Grid>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="64"/>
-                                        <RowDefinition Height="*"/>
-                                        <RowDefinition Height="84"/>
-                                    </Grid.RowDefinitions>
+                                <Border Grid.Row="1">
+                                    <Grid>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="64"/>
+                                            <RowDefinition Height="*"/>
+                                            <RowDefinition Height="84"/>
+                                        </Grid.RowDefinitions>
 
-                                    <Border Grid.Row="0" Margin="18,0">
-                                        <TextBox Style="{DynamicResource PrimarySearchBoxStyle}"/>
-                                    </Border>
-
-                                    <StackPanel Grid.Row="1" x:Name="MenuStackPanel" Orientation="Vertical" Margin="14,4"/>
-
-                                    <StackPanel Grid.Row="2" Orientation="Vertical">
-                                        <Border Margin="14,8">
-                                            <Button x:Name="BtnProfile" Style="{DynamicResource ProfileButtonStyle}"/>
+                                        <Border Grid.Row="0" Margin="18,0">
+                                            <TextBox Style="{DynamicResource PrimarySearchBoxStyle}"/>
                                         </Border>
-                                        <Border BorderBrush="{StaticResource SecondaryBrush}" BorderThickness="0,0.5,0,0">
-                                            <StackPanel Orientation="Horizontal" Margin="16,8">
-                                                <TextBlock Text="{DynamicResource Glb_ItaliaPizza}"
+
+                                        <StackPanel Grid.Row="1" x:Name="MenuStackPanel" Orientation="Vertical" Margin="14,4"/>
+
+                                        <StackPanel Grid.Row="2" Orientation="Vertical">
+                                            <Border Margin="14,8">
+                                                <Button x:Name="BtnProfile" Style="{DynamicResource ProfileButtonStyle}"/>
+                                            </Border>
+                                            <Border BorderBrush="{StaticResource SecondaryBrush}" BorderThickness="0,0.5,0,0">
+                                                <StackPanel Orientation="Horizontal" Margin="16,8">
+                                                    <TextBlock Text="{DynamicResource Glb_ItaliaPizza}"
                                                            Style="{DynamicResource RegularLabelStyle}"
                                                            FontWeight="Medium" Margin="0,0,6,0"/>
-                                                <TextBlock Text="{DynamicResource Glb_Version}"
+                                                    <TextBlock Text="{DynamicResource Glb_Version}"
                                                            Style="{DynamicResource DescriptionLabelStyle}"/>
-                                            </StackPanel>
-                                        </Border>
+                                                </StackPanel>
+                                            </Border>
+                                        </StackPanel>
+                                    </Grid>
+                                </Border>
+                            </Grid>
+                        </Border>
+
+                        <Border Grid.Column="1">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="42"/>
+                                    <RowDefinition Height="30"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
+
+                                <Grid Grid.Row="0">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <StackPanel Grid.Column="0" Orientation="Horizontal" Margin="20,0" Width="Auto" HorizontalAlignment="Left">
+                                        <Button x:Name="BtnBack" Style="{DynamicResource BackButtonStyle}"/>
                                     </StackPanel>
                                 </Grid>
-                            </Border>
-                        </Grid>
-                    </Border>
 
-                    <Border Grid.Column="1">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="42"/>
-                                <RowDefinition Height="30"/>
-                                <RowDefinition Height="*"/>
-                            </Grid.RowDefinitions>
-
-                            <Grid Grid.Row="0">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="*"/>
-                                </Grid.ColumnDefinitions>
-
-                                <StackPanel Grid.Column="0" Orientation="Horizontal" Margin="20,0" Width="Auto" HorizontalAlignment="Left">
-                                    <Button x:Name="BtnBack" Style="{DynamicResource BackButtonStyle}"/>
-                                </StackPanel>
-                            </Grid>
-
-                            <Border Grid.Row="1" BorderBrush="{StaticResource SecondaryBrush}" BorderThickness="0,0.5,0,0">
-                                <StackPanel x:Name="NavigationPanel" Orientation="Horizontal"
+                                <Border Grid.Row="1" BorderBrush="{StaticResource SecondaryBrush}" BorderThickness="0,0.5,0,0">
+                                    <StackPanel x:Name="NavigationPanel" Orientation="Horizontal"
                                             VerticalAlignment="Bottom" Margin="20,0"/>
-                            </Border>
+                                </Border>
 
-                            <Border Grid.Row="2" ClipToBounds="True">
-                                <Frame Name="MainFrame" NavigationUIVisibility="Hidden"/>
-                            </Border>
-                        </Grid>
-                    </Border>
-                </Grid>
-            </Border>
+                                <Border Grid.Row="2" ClipToBounds="True">
+                                    <Frame Name="MainFrame" NavigationUIVisibility="Hidden"/>
+                                </Border>
+                            </Grid>
+                        </Border>
+                    </Grid>
+                </Border>
 
+
+            </Grid>
+            <Grid x:Name="LoginGrid" >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <StackPanel Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" Width="300">
+                    <Image Source="/Resources/Icons/italiapizza-icon.png" 
+                           Width="100" Height="100" Margin="0,0,0,20" 
+                           RenderOptions.BitmapScalingMode="HighQuality"/>
+
+                    <TextBlock Text="Iniciar Sesión" 
+                               Style="{DynamicResource SubtitleLabelStyle}"
+                               FontSize="24"
+                               Margin="0,0,0,20"
+                               HorizontalAlignment="Center"/>
+
+                    <TextBox x:Name="txtUsuario" 
+                             Style="{DynamicResource TextBoxStyle}"
+                             Margin="0,0,0,10"
+                             Tag="Usuario"
+                             />
+
+                    <PasswordBox x:Name="txtPassword" 
+                                Style="{DynamicResource PasswordBoxStyle}"
+                                Margin="0,0,0,20"
+
+                                 Tag="Contraseña"
+                               />
+
+                    <Button x:Name="btnLogin" 
+                            Content="Ingresar" 
+                            Style="{DynamicResource PrimaryButtonStyle}"
+                            Height="45"
+                            FontSize="14"
+                            Click="BtnLogin_Click" Width="122"/>
+                </StackPanel>
+
+                <Border Grid.Column="1" Background="#EDEDFE">
+                    <Image Source="/Resources/Images/login-background.jpg"
+                           Stretch="UniformToFill"
+                           Opacity="0.8"/>
+                </Border>
+                
+            </Grid>
             <Border x:Name="DialogOverlay"
                     Background="#80000000"
-                    Visibility="Collapsed"
-                    HorizontalAlignment="Stretch"
-                    VerticalAlignment="Stretch">
+                    Visibility="Collapsed" Grid.ColumnSpan="2">
                 <ContentControl x:Name="DialogHost"
                                 HorizontalAlignment="Center"
                                 VerticalAlignment="Center"/>
             </Border>
+
         </Grid>
     </Border>
 </Window>
